Move block and seekable io support classes to its own packages